<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/small_spacing"
    android:gravity="start"
    android:orientation="vertical"
    android:weightSum="10">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="@dimen/extra_small_spacing">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal"
            android:weightSum="10">

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_margin="@dimen/small_spacing"
                android:layout_weight="2.5"
                android:contentDescription="@string/product_details"
                android:scaleType="centerInside"
                android:src="@drawable/goggle" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7.5"
                android:gravity="center_vertical"
                android:minHeight="140dp"
                android:orientation="vertical"
                android:padding="@dimen/small_spacing">

                <TextView
                    android:id="@+id/product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/demo_product_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/medium_text"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/small_spacing" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/discount_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/demo_price"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_2_text" />

                    <TextView
                        android:id="@+id/actual_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/small_spacing"
                        android:text="@string/demo_actual_price"
                        android:textSize="@dimen/small_2_text" />

                    <TextView
                        android:id="@+id/discount_percent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/small_spacing"
                        android:text="@string/demo_price_off"
                        android:textColor="@color/green"
                        android:textSize="@dimen/small_2_text"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray_6" />
</LinearLayout>