<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingTop="@dimen/big_spacing"
    tools:context=".fragments.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/container_bg"
            android:elevation="@dimen/extra_small_spacing"
            android:gravity="start"
            android:orientation="vertical"
            android:paddingStart="@dimen/medium_spacing"
            android:paddingTop="@dimen/extra_big_spacing"
            android:paddingEnd="@dimen/medium_spacing"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_in_to_get_started"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/medium_spacing" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/experience_all_new_app"
                android:textSize="@dimen/small_2_text" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/extra_big_spacing" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_bg"
                app:boxBackgroundColor="@color/transparent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_person"
                    android:drawablePadding="@dimen/medium_spacing"
                    android:hint="@string/name"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/medium_spacing" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etEmailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_bg"
                app:boxBackgroundColor="@color/transparent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="@dimen/medium_spacing"
                    android:hint="@string/e_mail_id"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/medium_spacing" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPhoneLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_bg"
                app:boxBackgroundColor="@color/transparent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_phone"
                    android:drawablePadding="@dimen/medium_spacing"
                    android:hint="@string/mobile_number"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/medium_spacing" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/transparent"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="@dimen/medium_spacing"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/medium_spacing" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etConfirmPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/transparent"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="@dimen/medium_spacing"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/big_spacing" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_spacing"
                android:background="@drawable/button_bg"
                android:elevation="@dimen/small_spacing"
                android:padding="@dimen/extra_small_spacing"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="@dimen/medium_text"
                app:layout_constraintBottom_toBottomOf="parent" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/big_spacing" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textSize="@dimen/small_2_text" />

                <TextView
                    android:id="@+id/go_to_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/background_black"
                    android:textSize="@dimen/small_2_text" />
            </LinearLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />
    </androidx.constraintlayout.widget.ConstraintLayout>
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"/>
</FrameLayout>