<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ProductDetailsFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/bottom_linear"
            android:layout_margin="@dimen/medium_spacing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:padding="@dimen/medium_spacing">
                    <ImageView
                        android:id="@+id/product_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/goggle"
                        android:scaleType="centerInside"
                        android:layout_gravity="center"
                        android:contentDescription="@string/product_details"
                        android:alpha="0.85"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="top|end"
                        android:layout_marginTop="@dimen/medium_spacing"
                        android:layout_marginEnd="@dimen/medium_spacing">
                        <androidx.cardview.widget.CardView
                            android:id="@+id/button_favourite"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            app:cardBackgroundColor="@color/white"
                            app:cardCornerRadius="40dp">
                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:src="@drawable/ic_favourite"
                                android:scaleType="centerCrop"
                                android:layout_margin="@dimen/small_spacing"
                                app:tint="@color/gray_6" />
                        </androidx.cardview.widget.CardView>
                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/medium_spacing"/>
                        <androidx.cardview.widget.CardView
                            android:id="@+id/button_share"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            app:cardBackgroundColor="@color/white"
                            app:cardCornerRadius="40dp">
                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:src="@drawable/ic_share"
                                android:scaleType="centerCrop"
                                android:layout_margin="@dimen/small_spacing"
                                app:tint="@color/gray_6" />
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </FrameLayout>
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/medium_spacing"/>
                <TextView
                    android:id="@+id/product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:textStyle="bold"
                    android:textSize="@dimen/medium_text"
                    android:lineSpacingExtra="@dimen/small_spacing"
                    android:text="@string/demo_product_name"/>
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/small_spacing"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/discount_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/demo_price"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="@dimen/big_text" />

                    <TextView
                        android:id="@+id/actual_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/small_spacing"
                        android:text="@string/demo_actual_price"
                        android:textSize="@dimen/big_text" />

                    <TextView
                        android:id="@+id/discount_percent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/small_spacing"
                        android:text="@string/demo_price_off"
                        android:textColor="@color/green"
                        android:textSize="@dimen/big_text"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
        <LinearLayout
            android:id="@+id/bottom_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical">
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/gray_6"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:text="@string/add_to_cart"
                    android:textSize="@dimen/small_2_text"/>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/gray_6"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:elevation="@dimen/small_spacing"
                    android:background="@color/primary_color"
                    android:text="@string/buy_now"
                    android:textSize="@dimen/small_2_text"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>
</FrameLayout>